Updated entities reducing complexity
